--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -21,7 +21,7 @@
     line-height: 2rem;
 }
 
-.hero__img-box img{
+.hero__img-box img, .hero__img-box video{
     width: 100%;
     height: 350px;
     border-radius: 20px;
